k8s/service_node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort
  ports:
  - name: goserver-service
    port: 80
    nodePort: 30001
    targetPort: 8000
    protocol: TCP
